Bug 487247 - OBS closes with no error reports in log when I click ANY button that browses files.
Summary: OBS closes with no error reports in log when I click ANY button that browses ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.2.0
Platform: Arch Linux Linux
: VHI grave
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-05-19 19:51 UTC by Liarus1001
Modified: 2024-05-23 23:21 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.1
Sentry Crash Report:


Attachments
backtrace (87.22 KB, text/plain)
2024-05-19 19:51 UTC, Liarus1001
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Liarus1001 2024-05-19 19:51:02 UTC
Created attachment 169629 [details]
backtrace

SUMMARY

OBS closes with no error reports in log when I click ANY button that browses files.

STEPS TO REPRODUCE
1. Click a browse files (...) button anywhere on the program. (Import profile, save location for videos...)
2. 
3. 

OBSERVED RESULT

When I click a browse button anywhere, OBS closes with no useful report in the logs.

EXPECTED RESULT

When I click a browse button (...) like inside "Remux Recordings" or the filepath for a media source it should open a dialog to browse files.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 40, Plasma 6.0.4 
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION

The issue happens wether we use the distro's repo version or Flatpak, the issue has been reported here: (https://github.com/obsproject/obs-studio/issues/10683) and it's been stated it should be reported here.
Friend also encounters the issue on Arch | Plasma 6.0.4 

downgrading kwidgetsaddons seems to fix the issue.
Comment 1 Christoph Feck 2024-05-19 23:46:08 UTC
Nate, did ef1ea307 land in a released version, or did Arch package a pre-release?
Comment 2 Christoph Feck 2024-05-19 23:48:18 UTC
Could also be related to bffd3b79. It is a recursion, after all. Maybe OBS uses setPalette().
Comment 3 Nate Graham 2024-05-21 16:53:28 UTC
I can confirm that ef1ea307 did NOT land in 6.2.

You're right that bffd3b79 also looks relevant. I can confirm the reported issue, and if I revert bffd3b79 locally, the issue goes away. so yeah, looks like bffd3b79caused it.

Joshua, can you take a look?
Comment 4 Bug Janitor Service 2024-05-21 21:15:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/248
Comment 5 Joshua Goins 2024-05-21 21:20:26 UTC
Git commit 64fcc6fff124dd74e059b9271ba6693a2d561704 by Joshua Goins.
Committed on 21/05/2024 at 21:15.
Pushed by redstrate into branch 'master'.

KMessageWidget: Avoid calling polish() inside of palette update

This causes infinite recursion as the palette is set and unset when the
application uses CSS stylesheets. But this call is simply unnecessary
and can be removed.

M  +1    -1    src/kmessagewidget.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/-/commit/64fcc6fff124dd74e059b9271ba6693a2d561704
Comment 6 Nicolas Fella 2024-05-23 06:46:38 UTC
Git commit e64fa52f2c92a02ee6c744ac4f2382d0a7bd111b by Nicolas Fella, on behalf of Joshua Goins.
Committed on 23/05/2024 at 06:43.
Pushed by nicolasfella into branch 'Frameworks/6.2'.

KMessageWidget: Avoid calling polish() inside of palette update

This causes infinite recursion as the palette is set and unset when the
application uses CSS stylesheets. But this call is simply unnecessary
and can be removed.
(cherry picked from commit 64fcc6fff124dd74e059b9271ba6693a2d561704)

M  +1    -1    src/kmessagewidget.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/-/commit/e64fa52f2c92a02ee6c744ac4f2382d0a7bd111b