KMessageWidget: Avoid calling polish() inside of palette update

This causes infinite recursion as the palette is set and unset when the
application uses CSS stylesheets. But this call is simply unnecessary
and can be removed.

BUG: 487247
(cherry picked from commit 64fcc6fff124dd74e059b9271ba6693a2d561704)